fixed overflow wrap for long text

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,5 +7,6 @@
 @layer utilities {
     p {
         white-space: pre-wrap;
+        overflow-wrap: break-word;
     }
 }
